--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 # App Properties
 bezkoder.app.jwtSecret=bezKoderSecretKey
 bezkoder.app.jwtExpirationMs=86400000
+bezkoder.app.jwtCookieName=todoauth
